created dropdown menu

--- a/index.html
+++ b/index.html
@@ -4,11 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Testing</h1>
+    <h1>Life's Journal</h1>
+    <hr>
+    <div class="navbar">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <div class="dropdown">
+          <button class="dropbtn">Blogs 
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <div class="header">
+              <h2>Mega Menu</h2>
+            </div>   
+            <div class="row">
+              <div class="column">
+                <h3>Men</h3>
+                <a href="#">Coming Soon!</a>
+                <a href="#">Coming Soon!</a>
+                <a href="#">Coming Soon!</a>
+              </div>
+              <div class="column">
+                <h3>Women</h3>
+                <a href="#">Coming Soon!</a>
+                <a href="#">Coming Soon!</a>
+                <a href="#">Coming Soon!</a>
+              </div>
+              <div class="column">
+                <h3>Front Yard</h3>
+                <a href="#">Coming Soon!</a>
+                <a href="#">Coming Soon!</a>
+                <a href="#">Coming Soon!</a>
+              </div>
+              <div class="column">
+                <h3>Amusement parks</h3>
+                <a href="#">Coming Soon!</a>
+                <a href="#">Coming Soon!</a>
+                <a href="#">Coming Soon!</a>
+              </div>
+            </div>
+          </div>
+        </div> 
+      </div>
+
     <script src="home.js"></script>
 </body>
 </html>
