--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Life's Blogs</title>
 </head>
 <body>
     <h1>Life's Journal</h1>
@@ -35,8 +35,8 @@
                 <a href="#">Coming Soon!</a>
               </div>
               <div class="column">
-                <h3>Front Yard</h3>
-                <a href="#">Coming Soon!</a>
+                <h3>Yard</h3>
+                <a href="mower.html">Ryobi Lawnmower</a>
                 <a href="#">Coming Soon!</a>
                 <a href="#">Coming Soon!</a>
               </div>
