--- a/mower.html
+++ b/mower.html
@@ -8,7 +8,49 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Ryobi Lawnmower</h1>
+    <h1>Life's Journal</h1>
+    <hr>
+    <div class="navbar">
+        <a href="index.html">Home</a>
+        <a href="#about">About</a>
+        <div class="dropdown">
+          <button class="dropbtn">Blogs 
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <div class="header">
+              <h2>Mega Menu</h2>
+            </div>   
+            <div class="row">
+              <div class="column">
+                <h3>Men</h3>
+                <a href="#">Coming Soon!</a>
+                <a href="#">Coming Soon!</a>
+                <a href="#">Coming Soon!</a>
+              </div>
+              <div class="column">
+                <h3>Women</h3>
+                <a href="#">Coming Soon!</a>
+                <a href="#">Coming Soon!</a>
+                <a href="#">Coming Soon!</a>
+              </div>
+              <div class="column">
+                <h3>Yard</h3>
+                <a href="mower.html">Ryobi Lawnmower</a>
+                <a href="#">Coming Soon!</a>
+                <a href="#">Coming Soon!</a>
+              </div>
+              <div class="column">
+                <h3>Amusement parks</h3>
+                <a href="#">Coming Soon!</a>
+                <a href="#">Coming Soon!</a>
+                <a href="#">Coming Soon!</a>
+              </div>
+            </div>
+          </div>
+        </div> 
+      </div>
+    <p>First off i'd like to thank you for visting my site as it is a treat to have visiters.</p>
     <script src="mower.js"></script>
 </body>
 </html>
