added text into ryobi mower page

--- a/mower.html
+++ b/mower.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mower.css">
-    <title>Document</title>
+    <title>Ryobi Lawnmower</title>
 </head>
 <body>
     <h1>Life's Journal</h1>
-    <hr>
     <div class="navbar">
         <a href="index.html">Home</a>
         <a href="#about">About</a>
@@ -50,7 +49,15 @@
           </div>
         </div> 
       </div>
-    <p>First off i'd like to thank you for visting my site as it is a treat to have visiters.</p>
+      <p>The Ryobi lawnmower is my second lawnmower that I have owned.
+        I have thought about purchasing a gasoline powered lawnmower for its power and no need to charge batteries or most importantly being tethered to a cable connected to your house. More on that later. 
+        I decided that the maintanence required for such a machine would outweigh the benefits for me as a homeowner that does not have acres of grass to cut. 
+        The specific name of the Ryobi product I bought is the Ryobi 40V HP Brushless 20 in. cordless lawnmower. I have placed a link of what store I bought it from for your convienance.</p>
+        <img src="https://lh3.googleusercontent.com/il9RX_FHN0DOVNFlMYMSfKpzXfwxARPfDUejLWjy5XnkGAloeE_0ZqTYz8vRth1AaP4FQAxxqidl9lfX80-m8gNFxBPXX6TF_CrMxZIE1LMHIOHws8CFpovGXNZXRtXJUTaEezcqQg=w600-h315-p-k"></img>
+        <a href="https://www.homedepot.com/p/RYOBI-40V-HP-Brushless-20-in-Cordless-Battery-Walk-Behind-Push-Mower-with-6-0-Ah-Battery-and-Charger-RY401170VNM/317061059" target="_blank">
+        <button onclick="window.open">Ryobi Lawnmower</button>
+      </a>
+        
     <script src="mower.js"></script>
 </body>
 </html>
